[package]
name = "qni-program-simple-rs"
version = "0.2.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"

[features]
ws-ssl = ["qni-connector-ws-rs/ssl"]

[lib]
name = "qni_program_simple"
crate-type = ["cdylib", "dylib", "rlib"]

[profile.release]
lto = true

[dependencies.qni-connector-ws-rs]
git = "https://github.com/Riey/qni-connector-ws-rs"

[dependencies]
log = "*"
pretty_env_logger = "*"
